CSS: Fixed pagination wrapping in IE8
Fixes #5612

--- a/src/base/bootstrap-overrides/_ie8.scss
+++ b/src/base/bootstrap-overrides/_ie8.scss
@@ -14,6 +14,8 @@
 
 		.pagination,
 		.pager {
+			width: 100%;
+
 			> li {
 				> a,
 				> span {
